<resources>
    <string name="app_name">Alchem</string>

    <string name="verify_email">Verify Email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_account">Create Account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
</resources>
