<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/main_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/grey_100"
              android:orientation="vertical"
              android:weightSum="4">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@android:color/black">

        <TextView
                android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content" android:id="@+id/textView"/>

        <EditText
                android:id="@+id/editText"
                android:layout_marginTop="200dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"
                android:gravity = "center"
                android:textColor="@android:color/white"
                android:backgroundTint="@android:color/holo_red_light"/>
        <Button
                android:text="New Word"
                android:textColor="@android:color/holo_red_light"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent" android:onClick="generateNewWord"
                android:layout_height="wrap_content" android:background="@android:color/black" android:id="@+id/button"/>
    </LinearLayout>


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:background="@android:color/black">

        <LinearLayout
                android:id="@+id/emailPasswordFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

            <EditText
                    android:id="@+id/fieldEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_email"
                    android:textColor="@android:color/white"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@android:color/holo_red_light"/>

            <EditText
                    android:id="@+id/fieldPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_password"
                    android:textColor="@android:color/white"
                    android:inputType="textPassword"
                    android:backgroundTint="@android:color/holo_red_light"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/emailPasswordButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailPasswordFields"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

            <Button
                    android:id="@+id/emailSignInButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_in"
                    android:background="@android:color/black"/>

            <Button
                    android:id="@+id/emailCreateAccountButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/create_account"
                    android:background="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/signedInButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:visibility="gone"
                android:weightSum="2.0">

            <Button
                    android:id="@+id/signOutButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/sign_out"
                    android:background="@android:color/black"/>

            <Button
                    android:id="@+id/verifyEmailButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/verify_email"
                    android:background="@android:color/black"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>